# raspars

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benchmarks/: README.md  bench.sh
raspars-cli/: Cargo.toml
raspars-cli/src/: main.rs
raspars-core/: Cargo.toml
raspars-core/src/: bundle.rs  compress.rs  decompress.rs  lib.rs  models.rs  test_helpers.rs
raspars-formats/: Cargo.toml
raspars-formats/src/: lib.rs
raspars-formats/src/cargo_lock/: mod.rs
raspars-formats/src/lockfiles/: format.rs  mod.rs
raspars-formats/src/lockfiles/cargo_lock/: mod.rs
raspars-formats/src/lockfiles/package_lock/: mod.rs
raspars-formats/src/lockfiles/pnpm_lock/: mod.rs
raspars-formats/tests/fixtures/angular/: pnpm-lock.yml
raspars-formats/tests/fixtures/astro/: pnpm-lockfile.yml
raspars-formats/tests/fixtures/babylon.js/: package-lock.json
raspars-formats/tests/fixtures/nuxt/: pnpm-lockfile.yml
raspars-formats/tests/fixtures/typescript/: package-lock.json
raspars-formats/tests/fixtures/vite/: pnpm-lockfile.yml
raspars-formats/tests/fixtures/vscode/: package-lock.json
