[workspace.package] 
version = "0.1.0" 
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"] 
edition = "2024" 
rust-version = "1.93.1"

[workspace]
members = [
  "raspars-core",
  "raspars-formats",
  "raspars-cli",
]

resolver = "3"

[workspace.dependencies]
zstd = "0.13.3"
serde = { version = "1.0.288", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = { version = "4.5.60", features = ["derive"] }

